--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -12,9 +12,11 @@
   line-height: 35px;
   cursor: pointer;
   user-select: none;
+  background: transparent;
+  border: none;
 }
 
-.todo-list-item.done .todo-list-item-label {
+.todo-list-item.done .todo-list-item-label, .todo-list-item.done input {
   text-decoration: line-through;
 }
 
